# prompt-optimizer

./: .gitignore  .pre-commit-config.yaml  README.md  activate.sh  alembic.ini  check_database.py  content.js  main.py  manifest.json  popup.html  popup.js  prompt_optimizer.js  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_context_service.py  test_embedding_service.py  test_groq_service.py  test_similarity_service.py  test_was_modified.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 619a8c2b4ea1_initial_migration_enhanced_models_with_.py
backend/: __init__.py
backend/app/: __init__.py
backend/app/core/: config.py  database.py
backend/app/routes/: context.py  optimization.py
backend/models/: prompt.py
backend/services/: cache_service.py  context_service.py  embedding_service.py  groq_service.py  similarity_service.py
backend/utils/: __init__.py  config_helpers.py  db_helpers.py  validation.py
config/: env.example
config/dev/: config.env
config/prod/: config.env
config/test/: config.env
cpp/bindings/: cache_serialization_bindings.cpp  normalization_bindings.cpp
cpp/include/: cache_serialization.h  normalization.h
cpp/src/: cache_serialization.cpp  normalization.cpp
docs/api/: README.md
docs/development/: BRANCH_STRATEGY.md  CONFIGURATION.md  README.md
frontend/: background.js  config.example.js  content.js  manifest.json  popup.html  popup.js  prompt_optimizer.js
scripts/: dev-server.sh  init-db.sh  setup-config.py  validate-config.py
tests/integration/: __init__.py
